--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Parser)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(parser main.cpp Parser.cpp)
+add_executable(parser main.cpp Parser.cpp Tokenizer.cpp)
